immich/immich-httproute-test.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http
  namespace: immich
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: http
  hostnames:
  - pics.3756home.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
