immich/immich-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-redirect
  namespace: immich
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: http
  hostnames:
    - pics.3756home.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-https
  namespace: immich
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: immich-https
  hostnames:
  - pics.3756home.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
